# chess-game

./: CMakeLists.txt  Dockerfile  Main.cpp  README.md
.github/workflows/: docker-image.yml
includes/: Board.h  Exceptions.h  Move.h  Pieces.h  Pos.h  Positions.h  Tests.h
src/: Board.cpp  CMakeLists.txt  Exceptions.cpp  Main.cpp  Move.cpp  Pieces.cpp  Pos.cpp  Positions.cpp  Tests.cpp
tests/: CMakeLists.txt  Tests.cpp
